--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body ng-app="DogWalkingSchedule">
 <div ng-view></div>
 
 <script src="js/lib/jquery/jquery-2.2.3.js"></script>
 <script src="js/lib/jquery/jquery-ui-1.9.2.custom.js"></script>
+<script src="js/lib/alertify.js"></script>
 <script src="js/lib/moment.min.js"></script>
 <script src="js/lib/fullcalendar/fullcalendar.js"></script>
 <script src="js/lib/angular/angular.js"></script>
 <script src="js/lib/angular/angular-route.js"></script>
-<script src="//da189i1jfloii.cloudfront.net/js/kinvey-angular-1.6.9.min.js"></script>
-<script src="js/lib/alertify.js"></script>
+<script src="js/lib/angular/angular-resource.js"></script>
+<script src="js/lib/angular/angular-cookies.min.js"></script>
+<script src="js/lib/angular/angular-base64.min.js"></script>
+<script src="js/lib/kinvey.js"></script>
+
+<script src="js/app.js"></script>
+<script src="js/config.js"></script>
+
+<script src="js/controllers/guestScreenController.js"></script>
+
 </body>
 </html>
