added calendar directive
Getting user's assigned events and displays them

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <script src="js/config.js"></script>
 
 <script src="js/controllers/guestScreenController.js"></script>
+<script src="js/controllers/userScreenController.js"></script>
+
+<script src="js/directives/initializeCalendarDirective.js"></script>
 
 </body>
 </html>
