Added dialogbox for event completition
*not working still

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="js/lib/alertify.js"></script>
 <script src="js/lib/moment.min.js"></script>
 <script src="js/lib/fullcalendar/fullcalendar.js"></script>
+<script src="js/lib/fullcalendar/bg.js"></script>
 <script src="js/lib/angular/angular.js"></script>
 <script src="js/lib/angular/angular-route.js"></script>
 <script src="js/lib/angular/angular-resource.js"></script>
