--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 <script src="js/lib/jquery/jquery-ui-1.9.2.custom.js"></script>
 <script src="js/lib/alertify.js"></script>
 <script src="js/lib/moment.min.js"></script>
-<script src="js/lib/fullcalendar/fullcalendar.js"></script>
+<script src="js/lib/fullcalendar/fullcalendar.min.js"></script>
 <script src="js/lib/fullcalendar/bg.js"></script>
-<script src="js/lib/angular/angular.js"></script>
-<script src="js/lib/angular/angular-route.js"></script>
-<script src="js/lib/angular/angular-resource.js"></script>
+<script src="js/lib/angular/angular.min.js"></script>
+<script src="js/lib/angular/angular-route.min.js"></script>
+<script src="js/lib/angular/angular-resource.min.js"></script>
 <script src="js/lib/angular/angular-cookies.min.js"></script>
 <script src="js/lib/angular/angular-base64.min.js"></script>
-<script src="js/lib/kinvey.js"></script>
+<script src="js/lib/kinvey.min.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
 
 <script src="js/controllers/guestScreenController.js"></script>
-<script src="js/controllers/userScreenController.js"></script>
 
 <script src="js/directives/initializeCalendarDirective.js"></script>
-
 </body>
 </html>
