Fixed project naming

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>График за разхождане на кучето</title>
+    <title>График за разхождане/къпане на кучето</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fullcalendar.min.css"/>
     <link rel="stylesheet" href="css/alertify.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body ng-app="DogWalkingSchedule">
+<body ng-app="DogSchedule">
 <div ng-view></div>
 
 <script src="js/lib/jquery/jquery-2.2.3.js"></script>
